03/23/2003 Bob Rossi <bob_rossi@cox.net>

    * tgdb now fully supports readline: tgdb now can support commands by using
    readline. It is transparent to the front end.

03/11/2003 Bob Rossi <bob_rossi@cox.net>

    * tgdb now allows a user to enter a command at a misc prompt:
    This fixes the problem where tgdb does not know that it is ok for the 
    user to enter a command at the misc prompt.

03/06/2003 Bob Rossi <bob_rossi@cox.net>

    * Changed the command interface to be a queue

03/04/2003 Bob Rossi <bob_rossi@cox.net>
   
    * Perfected the queue unit :)
    * Moved all of the command running into commands: This makes one nice entry
    point to running a command.
    * Wrote an infinate string unit: This replaced all the constant size
    buffers

03/03/2003 Bob Rossi <bob_rossi@cox.net>

    * Added a queue unit to the project: It will contain all of the commands
    ready to go to gdb.

03/02/2003 Bob Rossi <bob_rossi@cox.net>

    * readline buffer commands working
    * Made readline not install any signal handler's

02/27/2003 Bob Rossi <bob_rossi@cox.net>

    * Fix parse bug, looking for 'Located in': when tgdb switch to starting
    gdb from a tty to a regular pipe, gdb now sometimes outputs the command
    that was typed, and sometimes it doesn't ( depending on version ).
    So, instead of counting lines, tgdb looks for 'Located in' after a 
    the 'info source' command.
    * Fix bug with 'info sources': tgdb_get_sources was not returning 
    all of the source files because of an allocation bug.

02/26/2003 Bob Rossi <bob_rossi@cox.net>

    * Added extra parameter to tgdb_start: A new fd is returned from 
    tgdb_start, it signals the user when data the user is typing is 
    ready to be returned.
    * Added function tgdb_send_input: The gui should send to this function
    every char the user has typed ( from readline ).
    * Added function tgdb_recv_input: The gui calls this function when the